[gd_scene load_steps=8 format=2]

[ext_resource path="res://src/main/Main.gd" type="Script" id=1]
[ext_resource path="res://src/ui/UI.tscn" type="PackedScene" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 540, 800 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 540, 50 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 540, 30 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 20, 300 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 10, 800 )

[node name="Main" type="Node2D"]
script = ExtResource( 1 )

[node name="TapArea" type="Area2D" parent="."]

[node name="TapCollision" type="CollisionShape2D" parent="TapArea"]
position = Vector2( 540, 800 )
shape = SubResource( 1 )

[node name="Ground" type="StaticBody2D" parent="."]
position = Vector2( 540, 1550 )

[node name="GroundCollision" type="CollisionShape2D" parent="Ground"]
shape = SubResource( 5 )

[node name="Ceiling" type="StaticBody2D" parent="."]
position = Vector2( 540, 30 )

[node name="CeilingCollision" type="CollisionShape2D" parent="Ceiling"]
shape = SubResource( 2 )

[node name="Start" type="Position2D" parent="."]
position = Vector2( 0, 500 )

[node name="Gate" type="Area2D" parent="."]
position = Vector2( 1080, 500 )

[node name="GateCollision" type="CollisionShape2D" parent="Gate"]
shape = SubResource( 3 )

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="Wall" type="StaticBody2D" parent="."]
position = Vector2( 1090, 800 )

[node name="WallCollision" type="CollisionShape2D" parent="Wall"]
shape = SubResource( 4 )

[node name="UI" parent="." instance=ExtResource( 2 )]
margin_right = 95.0
margin_bottom = 49.0
[connection signal="input_event" from="TapArea" to="." method="_on_TapArea_input_event"]
[connection signal="body_entered" from="Gate" to="." method="_on_Gate_body_entered"]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
